force-app/main/default/objects/VTXY_UsageSummary__c/VTXY_UsageSummary__c.object-meta.xml
<CustomObject>
    <description>Source for billing summaries</description>
    <label>Usage Summary</label>
    <nameField>
        <label>Usage SummaryName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>