force-app/main/default/objects/VTXY_UsageSummary__c/fields/Included_Quantity_Applied__c.field-meta.xml
<CustomField>
    <fullName>Included_Quantity_Applied__c</fullName>
    <label>Included_Quantity_Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>