force-app/main/default/objects/VTXY_UsageSummary__c/fields/Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Payload_JSON__c</fullName>
    <description>Safe JSON payload snapshot</description>
    <label>Payload JSON</label>
    <length>120</length>
    <type>Text</type>
</CustomField>